--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -1,18 +1,18 @@
 <?xml version = "1.0" encoding = "UTF-8"?>
 <properties>
-  <entry key="xr:Buyer_reference" id="BT-10">Buyer reference</entry>
+  <entry key="xr:Buyer_reference" id="BT-10">Buyer reference</entry> <!-- Routing-ID -->
   <entry key="xr:Buyer_name" id="BT-44">Name</entry>
   <entry key="xr:Buyer_address_line_1" id="BT-50">Address line 1</entry>
   <entry key="xr:Buyer_address_line_2" id="BT-51">Address line 2</entry>
   <entry key="xr:Buyer_address_line_3" id="BT-163">Address line 3</entry>
   <entry key="xr:Buyer_post_code" id="BT-53">ZIP</entry>
   <entry key="xr:Buyer_city" id="BT-52">Location</entry>
-  <entry key="xr:Buyer_country_code" id="BT-55">Country code</entry>
+  <entry key="xr:Buyer_country_code" id="BT-55">Country code</entry> <!-- Country -->
   <entry key="xr:Buyer_identifier" id="BT-46">Identifier</entry>
   <entry key="xr:Buyer_identifier/@scheme_identifier" id="BT-46">Scheme identifier</entry>
   <entry key="xr:Buyer_contact_point" id="BT-56">Contact point</entry>
   <entry key="xr:Buyer_contact_telephone_number" id="BT-57">Contact point phone</entry>
-  <entry key="xr:Buyer_contact_email_address" id="BT-58">Contact point email</entry>
+  <entry key="xr:Buyer_contact_email_address" id="BT-58">Contact point email</entry> <!-- E-Mail address -->
   <entry key="xr:Seller_name" id="BT-27">Company name</entry>
   <entry key="xr:Seller_address_line_1" id="BT-35">Address line 1</entry>
   <entry key="xr:Seller_address_line_2" id="BT-36">Address line 2</entry>
@@ -25,15 +25,15 @@
   <entry key="xr:Seller_identifier/@scheme_identifier" id="BT-29">Scheme identifier</entry>
   <entry key="xr:Seller_contact_point" id="BT-41">Contact point</entry>
   <entry key="xr:Seller_contact_telephone_number" id="BT-42">Contact point phone</entry>
-  <entry key="xr:Seller_contact_email_address" id="BT-43">Contact point email</entry>
+  <entry key="xr:Seller_contact_email_address" id="BT-43">Contact point email</entry> <!-- E-Mail address -->
   <entry key="xr:Invoice_number" id="BT-1">Invoice number</entry>
   <entry key="xr:Invoice_issue_date" id="BT-2">Invoice date</entry>
   <entry key="xr:Invoice_type_code" id="BT-3">Invoice type</entry>
   <entry key="xr:Invoice_currency_code" id="BT-5">Currency</entry>
-  <entry key="xr:Project_reference" id="BT-11">Project reference</entry>
+  <entry key="xr:Project_reference" id="BT-11">Project reference</entry> <!-- Project number -->
   <entry key="xr:Contract_reference" id="BT-12">Contract reference</entry>
-  <entry key="xr:Purchase_order_reference" id="BT-13">Purchse order reference</entry>
-  <entry key="xr:Sales_order_reference" id="BT-14">Sales order reference</entry>
+  <entry key="xr:Purchase_order_reference" id="BT-13">Purchase order reference</entry> <!-- Order number -->
+  <entry key="xr:Sales_order_reference" id="BT-14">Sales order reference</entry> <!-- Order number -->
   <!-- Be aware that these are for the whole invoice -->
   <entry key="xr:Invoicing_period_start_date" id="BT-73">From</entry>
   <entry key="xr:Invoicing_period_end_date" id="BT-74">To</entry>
@@ -46,7 +46,7 @@
   <entry key="xr:Invoice_total_VAT_amount" id="BT-110">Total VAT</entry>
   <entry key="xr:Invoice_total_VAT_amount_in_accounting_currency" id="BT-111">Total VAT in accounting currency</entry>
   <entry key="xr:Invoice_total_amount_with_VAT" id="BT-112">Total amount</entry>
-  <entry key="xr:Paid_amount" id="BT-113">Already paid</entry>
+  <entry key="xr:Paid_amount" id="BT-113">Already paid</entry> <!-- Amount paid -->
   <entry key="xr:Rounding_amount" id="BT-114">Rounding amount</entry>
   <entry key="xr:Amount_due_for_payment" id="BT-115">Amount due</entry>
   <entry key="xr:VAT_category_code" id="BT-118">VAT category</entry>
@@ -73,33 +73,33 @@
   <entry key="xr:Document_level_charge_reason_code" id="BT-105">Charge reason code</entry>
   <entry key="xr:Payment_terms" id="BT-20">Payment terms</entry>
   <entry key="xr:Payment_due_date" id="BT-9">Due date</entry>
-  <entry key="xr:Payment_means_type_code" id="BT-81">Payment means type code</entry>
+  <entry key="xr:Payment_means_type_code" id="BT-81">Payment means type code</entry> <!-- Code for the payment means -->
   <entry key="xr:Payment_means_text" id="BT-82">Payment means</entry>
   <entry key="xr:Remittance_information" id="BT-83">Remittance information</entry>
   <entry key="xr:Payment_card_primary_account_number" id="BT-87">Card number</entry>
   <entry key="xr:Payment_card_holder_name" id="BT-88">Card holder</entry>
   <!-- BG-19 Direct Debit -->
   <entry key="xr:Mandate_reference_identifier" id="BT-89">Mandate reference no.</entry>
-  <entry key="xr:Debited_account_identifier" id="BT-91">Debited account identifier</entry>
+  <entry key="xr:Debited_account_identifier" id="BT-91">Debited account identifier</entry> <!-- IBAN -->
   <entry key="xr:Bank_assigned_creditor_identifier" id="BT-90">Creditor ID</entry>
   <!-- BG-17 Credit Transfer-->
   <entry key="xr:Payment_account_name" id="BT-85">Account holder</entry>
-  <entry key="xr:Payment_account_identifier" id="BT-84">Account identifier</entry>
+  <entry key="xr:Payment_account_identifier" id="BT-84">Account identifier</entry> <!-- IBAN -->
   <entry key="xr:Payment_service_provider_identifier" id="BT-86">BIC</entry>
   <entry key="xr:Invoice_note_subject_code" id="BT-21">Subject code</entry>
-  <entry key="xr:Invoice_note" id="BT-22">Note</entry>
+  <entry key="xr:Invoice_note" id="BT-22">Note</entry> <!-- Note -->
   <!-- BG-4 Seller and others -->
   <entry key="xr:Seller_trading_name" id="BT-28">Different trading name</entry>
   <entry key="xr:Seller_electronic_address" id="BT-34">Electronic address</entry>
   <entry key="xr:Seller_electronic_address/@scheme_identifier" id="BT-34">Electronic address
     scheme</entry>
-  <entry key="xr:Seller_legal_registration_identifier" id="BT-30">Legal registration identifier</entry>
+  <entry key="xr:Seller_legal_registration_identifier" id="BT-30">Legal registration identifier</entry> <!-- Register/registration number -->
   <entry key="xr:Seller_legal_registration_identifier/@scheme_identifier" id="BT-30">Legal registration identifier scheme</entry>
   <entry key="xr:Seller_VAT_identifier" id="BT-31">VAT ID</entry>
   <entry key="xr:Seller_tax_registration_identifier" id="BT-32">Tax number</entry>
   <entry key="xr:Seller_tax_registration_identifier/@scheme_identifier" id="BT-32">Tax number scheme</entry>
   <entry key="xr:Seller_additional_legal_information" id="BT-33">Further legal information</entry>
-  <entry key="xr:VAT_accounting_currency_code" id="BT-6">VAT accounting currency</entry>
+  <entry key="xr:VAT_accounting_currency_code" id="BT-6">VAT accounting currency</entry> <!--  -->
   <!-- BG 12 and 11 Tax Representative party -->
   <entry key="xr:Seller_tax_representative_name" id="BT-62">Name</entry>
   <entry key="xr:Tax_representative_address_line_1" id="BT-64">Addressline 1</entry>
@@ -115,7 +115,7 @@
   <entry key="xr:Buyer_country_subdivision" id="BT-54">State</entry>
   <entry key="xr:Buyer_electronic_address" id="BT-49">Electronic address</entry>
   <entry key="xr:Buyer_electronic_address/@scheme_identifier" id="BT-49">Electronic address scheme</entry>
-  <entry key="xr:Buyer_legal_registration_identifier" id="BT-47">Legal registration identifier</entry>
+  <entry key="xr:Buyer_legal_registration_identifier" id="BT-47">Legal registration identifier</entry> <!-- Register/registration number -->
   <entry key="xr:Buyer_legal_registration_identifier/@scheme_identifier" id="BT-47">Legal registration identifier scheme</entry>
   <entry key="xr:Buyer_VAT_identifier" id="BT-48">VAT ID</entry>
   <entry key="xr:Value_added_tax_point_date" id="BT-7">Value added tax point date</entry>
@@ -131,7 +131,7 @@
   <entry key="xr:Deliver_to_post_code" id="BT-78">ZIP</entry>
   <entry key="xr:Deliver_to_city" id="BT-77">Location</entry>
   <entry key="xr:Deliver_to_country_subdivision" id="BT-79">State</entry>
-  <entry key="xr:Deliver_to_country_code" id="BT-80">Country</entry>
+  <entry key="xr:Deliver_to_country_code" id="BT-80">Country</entry> <!-- Country -->
   <entry key="xr:Tender_or_lot_reference" id="BT -17">Award reference</entry>
   <entry key="xr:Receiving_advice_reference" id="BT-15">Receiving advice reference</entry>
   <entry key="xr:Despatch_advice_reference" id="BT-16">Despatch advice reference</entry>
@@ -143,7 +143,7 @@
   <entry key="xr:Payee_name" id="BT-59">Name</entry>
   <entry key="xr:Payee_identifier" id="BT-60">Identifier</entry>
   <entry key="xr:Payee_identifier/@scheme_identifier" id="BT-60a">Identification scheme</entry>
-  <entry key="xr:Payee_legal_registration_identifier" id="BT-61">Legal registration identifier</entry>
+  <entry key="xr:Payee_legal_registration_identifier" id="BT-61">Legal registration identifier</entry> <!-- Register/registration number -->
   <entry key="xr:Payee_legal_registration_identifier/@scheme_identifier" id="BT-61">Legal registration identifier scheme</entry>
   <!-- BG 24 Additonal supporting Documents -->
   <entry key="xr:Supporting_document_reference" id="BT-122">Identifier</entry>
@@ -160,31 +160,31 @@
   <entry key="xr:Invoice_line_note" id="BT-127">Free text</entry>
   <entry key="xr:Invoice_line_object_identifier" id="BT-128_identifier">Object identifier</entry>
   <entry key="xr:Invoice_line_object_identifier/@scheme_identifier" id="BT-128_scheme">Object identifier scheme</entry>
-  <entry key="xr:Referenced_purchase_order_line_reference" id="BT-132">Number of the order item</entry>
-  <entry key="xr:Invoice_line_Buyer_accounting_reference" id="BT-133">Buyer accounting reference</entry>
+  <entry key="xr:Referenced_purchase_order_line_reference" id="BT-132">Number of the order item</entry> <!-- Order item number -->
+  <entry key="xr:Invoice_line_Buyer_accounting_reference" id="BT-133">Buyer accounting reference</entry> <!-- Account assignment note -->
   <entry key="xr:Invoice_line_period_start_date" id="BT-134">From</entry>
   <entry key="xr:Invoice_line_period_end_date" id="BT-135">To</entry>
   <entry key="xr:Invoiced_quantity" id="BT-129">Quantity</entry>
   <entry key="xr:Invoiced_quantity_unit_of_measure_code" id="BT-130">Unit</entry>
   <entry key="xr:Item_net_price" id="BT-146">Price per unit (net)</entry>
-  <entry key="xr:Invoice_line_net_amount" id="BT-131">Total price (net)</entry>
+  <entry key="xr:Invoice_line_net_amount" id="BT-131">Total price (net)</entry> <!-- Total price (net) -->
   <entry key="xr:Item_price_discount" id="BT-147">Discount (net)</entry>
   <entry key="xr:Item_gross_price" id="BT-148">List price (net)</entry>
-  <entry key="xr:Item_price_base_quantity" id="BT-149">Price unit</entry>
-  <entry key="xr:Item_price_base_quantity_unit_of_measure" id="BT-150">Unit code</entry>
+  <entry key="xr:Item_price_base_quantity" id="BT-149">Price unit</entry> <!-- Number of units -->
+  <entry key="xr:Item_price_base_quantity_unit_of_measure" id="BT-150">Unit code</entry> <!-- Unit code -->
   <entry key="xr:Invoiced_item_VAT_category_code" id="BT-151">VAT category</entry>
   <entry key="xr:Invoiced_item_VAT_rate" id="BT-152">VAT rate (%)</entry>
   <entry key="xr:Item_name" id="BT-153">Name</entry>
   <entry key="xr:Item_description" id="BT-154">Description</entry>
-  <entry key="xr:Item_Sellers_identifier" id="BT-155">Item identifier</entry>
+  <entry key="xr:Item_Sellers_identifier" id="BT-155">Item identifier</entry> <!-- Item number -->
   <entry key="xr:Item_Buyers_identifier" id="BT-156">Buyer's item identifier</entry>
   <entry key="xr:Item_standard_identifier" id="BT-157_identifier">Item standard identifier</entry>
-  <entry key="xr:Item_standard_identifier/@scheme_identifier" id="BT-157_scheme">Item standard <identification></identification> scheme</entry>
-  <entry key="xr:Item_classification_identifier" id="BT-158">Item classification code</entry>
+  <entry key="xr:Item_standard_identifier/@scheme_identifier" id="BT-157_scheme">Item standard <identification></identification> scheme</entry> <!-- Item identification scheme -->
+  <entry key="xr:Item_classification_identifier" id="BT-158">Item classification code</entry> <!-- Item classification code -->
   <entry key="xr:Item_classification_identifier/@scheme_identifier" id="BT-158_identifier">Item classification code scheme</entry>
   <entry key="xr:Item_classification_identifier/@scheme_version_identifier" id="BT-158_scheme">Version of the item classification code scheme
     for creating the schema</entry>
-  <entry key="xr:Item_country_of_origin" id="BT-159">Country of origin</entry>
+  <entry key="xr:Item_country_of_origin" id="BT-159">Country of origin</entry> <!-- VAT currency code -->
   <entry key="xr:Invoice_line_allowance_base_amount" id="BT-137">Base amount (net)</entry>
   <entry key="xr:Invoice_line_allowance_percentage" id="BT-138">Percentage</entry>
   <entry key="xr:Invoice_line_allowance_amount" id="BT-136">Allowance (net)</entry>
@@ -242,36 +242,7 @@
   <entry key="percentage-format">##0.##</entry>
   <entry key="at-least-two-format">###,##0.#################</entry>
   <!-- New entries needed for HTML localization -->
-  <entry key="Adresszusatz">Additional address</entry>
-  <entry key="Anzahl der Einheit">Number of units</entry>
-  <entry key="Artikelnummer">Item number</entry>
-  <entry key="Aufschlüsselung der Umsatzsteuer auf Ebene der Rechnung">Sales tax breakdown at invoice level</entry>
-  <entry key="Auftragsnummer">Order number</entry>
-  <entry key="Bemerkung zur Rechnung">Note on the invoice</entry>
-  <entry key="Bemerkung">Note</entry>
-  <entry key="Bestellnummer">Order number</entry>
-  <entry key="Betreff">Reference</entry>
-  <entry key="Code der Artikelklassifizierung">Item classification code</entry>
-  <entry key="Code der Maßeinheit">Unit code</entry>
-  <entry key="Code der Umsatzsteuerwährung"></entry>
-  <entry key="Code des Herkunftslandes">VAT currency code</entry>
-  <entry key="Code für das Zahlungsmittel">Code for the payment means</entry>
-  <entry key="E-Mail-Adresse">E-Mail address</entry>
-  <entry key="Eigenschaften des Artikels">Properties of the item</entry>
-  <entry key="Gesamtpreis (netto)">Total price (net)</entry>
-  <entry key="Gezahlter Betrag">Amount paid</entry>
-  <entry key="IBAN">IBAN</entry>
-  <entry key="Karteninformation">Card information</entry>
-  <entry key="Kontierungshinweis">Account assignment note</entry>
-  <entry key="Land">Country</entry>
-  <entry key="Leitweg-ID">Routing-ID</entry>
-  <entry key="Nummer der Auftragsposition">Order item number</entry>
-  <entry key="Position">Position</entry>
-  <entry key="Postfach">PO Box</entry>
-  <entry key="Preiseinzelheiten">Price details</entry>
-  <entry key="Projektnummer">Project number</entry>
-  <entry key="Register-/Registriernummer">Register/registration number</entry>
-  <entry key="Schema der Artikelkennung">Item identification scheme</entry>
+  
   <entry key="Schema der Register-/Registriernummer">Registry/registrar number scheme</entry>
   <entry key="Skonto; weitere Zahlungsbedingungen">Discount; other payment terms</entry>
   <entry key="Straße / Hausnummer">Street / House number</entry>
@@ -301,4 +272,13 @@
   <entry key="Code für den Nachlassgrund">Allowance reason code</entry>
   <entry key="Code für den Zuschlagsgrund">Surcharge reason code</entry>
   <entry key="Grund des Zuschlags">Reason for the surcharge</entry>
+  
+  <!-- specify -->
+  <entry key="Aufschlüsselung der Umsatzsteuer auf Ebene der Rechnung">Sales tax breakdown at invoice level</entry>
+  <entry key="Bemerkung zur Rechnung">Note on the invoice</entry>
+  <entry key="Betreff">Reference</entry>
+  <entry key="Eigenschaften des Artikels">Properties of the item</entry>
+  <entry key="Karteninformation">Card information</entry>
+  <entry key="Position">Position</entry>
+  <entry key="Preiseinzelheiten">Price details</entry>
 </properties>
